# recitation

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  recitation_0_setup.ipynb  recitation_1_torch_basics_dataset.ipynb  recitation_2_build_train_model.ipynb  recitation_4_backprop.ipynb  recitation_5_embed_and_cnn.ipynb  recitation_6_transformer.ipynb
answers/: recitation_1_answers.ipynb  recitation_2_answers.ipynb  recitation_4_answers.ipynb  recitation_5_answers.ipynb  recitation_6_answers.ipynb
