[project]
name = "recitation"
version = "0.1.0"
description = "Brandeis CS231 Recitation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "torch~=2.6.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "recitation_core"
module-root = ""

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
